k8s/strategies/shadow/deploy-shadow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ace-api-shadow
  labels:
    app: ace-api
    tier: shadow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ace-api
      tier: shadow
  template:
    metadata:
      labels:
        app: ace-api
        tier: shadow
    spec:
      containers:
      - name: web
        image: docker.io/maverickvaib/aceest-fitness:latest
        ports:
        - containerPort: 5000
